parser/cool.output
Terminals unused in grammar

    ERROR


State 108 conflicts: 9 shift/reduce
State 138 conflicts: 9 shift/reduce
State 153 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: ε
    7             | feature_list feature

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expr ';'

   11 formal_list: ε
   12            | formal
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expr_list: ε
   16          | expr
   17          | expr_list ',' expr

   18 expr_block: expr ';'
   19           | expr_block expr ';'
   20           | error ';'
   21           | expr_block error ';'

   22 expr: OBJECTID ASSIGN expr
   23     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   24     | expr '.' OBJECTID '(' expr_list ')'
   25     | OBJECTID '(' expr_list ')'
   26     | IF expr THEN expr ELSE expr FI
   27     | WHILE expr LOOP expr POOL
   28     | '{' expr_block '}'
   29     | LET let_expr
   30     | CASE expr OF case_list ESAC
   31     | CASE OF case_list ESAC
   32     | NEW TYPEID
   33     | ISVOID expr
   34     | expr '+' expr
   35     | expr '-' expr
   36     | expr '*' expr
   37     | expr '/' expr
   38     | '~' expr
   39     | expr '<' expr
   40     | expr LE expr
   41     | expr '=' expr
   42     | NOT expr
   43     | '(' expr ')'
   44     | OBJECTID
   45     | INT_CONST
   46     | STR_CONST
   47     | BOOL_CONST

   48 let_expr: OBJECTID ':' TYPEID IN expr
   49         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   50         | OBJECTID ':' TYPEID ',' let_expr
   51         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   52         | error IN expr
   53         | error ',' let_expr

   54 case_list: case
   55          | case_list case

   56 case: OBJECTID ':' TYPEID DARROW expr ';'
   57     | error ':' TYPEID DARROW expr ';'
   58     | OBJECTID ':' error DARROW expr ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 23 24 25 43
    ')' (41) 8 23 24 25 43
    '*' (42) 36
    '+' (43) 34
    ',' (44) 13 17 50 51 53
    '-' (45) 35
    '.' (46) 23 24
    '/' (47) 37
    ':' (58) 8 9 10 14 48 49 50 51 56 57 58
    ';' (59) 4 5 8 9 10 18 19 20 21 56 57 58
    '<' (60) 39
    '=' (61) 41
    '@' (64) 23
    '{' (123) 4 5 8 28
    '}' (125) 4 5 8 28
    '~' (126) 38
    error (256) 20 21 52 53 57 58
    CLASS (258) 4 5
    ELSE (259) 26
    FI (260) 26
    IF (261) 26
    IN (262) 48 49 52
    INHERITS (263) 5
    LET (264) 29
    LOOP (265) 27
    POOL (266) 27
    THEN (267) 26
    WHILE (268) 27
    CASE (269) 30 31
    ESAC (270) 30 31
    OF (271) 30 31
    DARROW (272) 56 57 58
    NEW (273) 32
    ISVOID (274) 33
    STR_CONST <symbol> (275) 46
    INT_CONST <symbol> (276) 45
    BOOL_CONST <boolean> (277) 47
    TYPEID <symbol> (278) 4 5 8 9 10 14 23 32 48 49 50 51 56 57
    OBJECTID <symbol> (279) 8 9 10 14 22 23 24 25 44 48 49 50 51 56 58
    ASSIGN (280) 10 22 49 51
    NOT (281) 42
    LE (282) 40
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5
        on right: 2 3
    feature_list <features> (49)
        on left: 6 7
        on right: 4 5 7
    feature <feature> (50)
        on left: 8 9 10
        on right: 7
    formal_list <formals> (51)
        on left: 11 12 13
        on right: 8 13
    formal <formal> (52)
        on left: 14
        on right: 12 13
    expr_list <expressions> (53)
        on left: 15 16 17
        on right: 17 23 24 25
    expr_block <expressions> (54)
        on left: 18 19 20 21
        on right: 19 21 28
    expr <expression> (55)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 8 10 16 17 18 19 22 23 24 26 27 30 33 34 35 36 37 38 39 40 41 42 43 48 49 51 52 56 57 58
    let_expr <expression> (56)
        on left: 48 49 50 51 52 53
        on right: 29 50 51 53
    case_list <cases> (57)
        on left: 54 55
        on right: 30 31 55
    case <case_> (58)
        on left: 56 57 58
        on right: 54 55


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 11


State 10

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' feature_list • '}' ';'
    7 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 14

    feature  go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 16


State 13

    8 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID • ':' TYPEID ';'
   10        | OBJECTID • ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 19


State 15

    7 feature_list: feature_list feature •

    $default  reduce using rule 7 (feature_list)


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    7 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 20

    feature  go to state 15


State 17

    8 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 11 (formal_list)

    formal_list  go to state 22
    formal       go to state 23


State 18

    9 feature: OBJECTID ':' • TYPEID ';'
   10        | OBJECTID ':' • TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 24


State 19

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 25


State 21

   14 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 26


State 22

    8 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}' ';'
   13 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 27
    ','  shift, and go to state 28


State 23

   12 formal_list: formal •

    $default  reduce using rule 12 (formal_list)


State 24

    9 feature: OBJECTID ':' TYPEID • ';'
   10        | OBJECTID ':' TYPEID • ASSIGN expr ';'

    ASSIGN  shift, and go to state 29
    ';'     shift, and go to state 30


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 26

   14 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 31


State 27

    8 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 32


State 28

   13 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 21

    formal  go to state 33


State 29

   10 feature: OBJECTID ':' TYPEID ASSIGN • expr ';'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 48


State 30

    9 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 9 (feature)


State 31

   14 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 14 (formal)


State 32

    8 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 49


State 33

   13 formal_list: formal_list ',' formal •

    $default  reduce using rule 13 (formal_list)


State 34

   26 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 50


State 35

   29 expr: LET • let_expr

    error     shift, and go to state 51
    OBJECTID  shift, and go to state 52

    let_expr  go to state 53


State 36

   27 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 54


State 37

   30 expr: CASE • expr OF case_list ESAC
   31     | CASE • OF case_list ESAC

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    OF          shift, and go to state 55
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 56


State 38

   32 expr: NEW • TYPEID

    TYPEID  shift, and go to state 57


State 39

   33 expr: ISVOID • expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 58


State 40

   46 expr: STR_CONST •

    $default  reduce using rule 46 (expr)


State 41

   45 expr: INT_CONST •

    $default  reduce using rule 45 (expr)


State 42

   47 expr: BOOL_CONST •

    $default  reduce using rule 47 (expr)


State 43

   22 expr: OBJECTID • ASSIGN expr
   25     | OBJECTID • '(' expr_list ')'
   44     | OBJECTID •

    ASSIGN  shift, and go to state 59
    '('     shift, and go to state 60

    $default  reduce using rule 44 (expr)


State 44

   42 expr: NOT • expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 61


State 45

   38 expr: '~' • expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 62


State 46

   28 expr: '{' • expr_block '}'

    error       shift, and go to state 63
    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr_block  go to state 64
    expr        go to state 65


State 47

   43 expr: '(' • expr ')'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 66


State 48

   10 feature: OBJECTID ':' TYPEID ASSIGN expr • ';'
   23 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   24     | expr • '.' OBJECTID '(' expr_list ')'
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • '*' expr
   37     | expr • '/' expr
   39     | expr • '<' expr
   40     | expr • LE expr
   41     | expr • '=' expr

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 76


State 49

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}' ';'

    '{'  shift, and go to state 77


State 50

   23 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   24     | expr • '.' OBJECTID '(' expr_list ')'
   26     | IF expr • THEN expr ELSE expr FI
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • '*' expr
   37     | expr • '/' expr
   39     | expr • '<' expr
   40     | expr • LE expr
   41     | expr • '=' expr

    THEN  shift, and go to state 78
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 51

   52 let_expr: error • IN expr
   53         | error • ',' let_expr

    IN   shift, and go to state 79
    ','  shift, and go to state 80


State 52

   48 let_expr: OBJECTID • ':' TYPEID IN expr
   49         | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   50         | OBJECTID • ':' TYPEID ',' let_expr
   51         | OBJECTID • ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 81


State 53

   29 expr: LET let_expr •

    $default  reduce using rule 29 (expr)


State 54

   23 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   24     | expr • '.' OBJECTID '(' expr_list ')'
   27     | WHILE expr • LOOP expr POOL
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • '*' expr
   37     | expr • '/' expr
   39     | expr • '<' expr
   40     | expr • LE expr
   41     | expr • '=' expr

    LOOP  shift, and go to state 82
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 55

   31 expr: CASE OF • case_list ESAC

    error     shift, and go to state 83
    OBJECTID  shift, and go to state 84

    case_list  go to state 85
    case       go to state 86


State 56

   23 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   24     | expr • '.' OBJECTID '(' expr_list ')'
   30     | CASE expr • OF case_list ESAC
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • '*' expr
   37     | expr • '/' expr
   39     | expr • '<' expr
   40     | expr • LE expr
   41     | expr • '=' expr

    OF   shift, and go to state 87
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


State 57

   32 expr: NEW TYPEID •

    $default  reduce using rule 32 (expr)


State 58

   23 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   24     | expr • '.' OBJECTID '(' expr_list ')'
   33     | ISVOID expr •
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • '*' expr
   37     | expr • '/' expr
   39     | expr • '<' expr
   40     | expr • LE expr
   41     | expr • '=' expr

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 33 (expr)


State 59

   22 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 88


State 60

   25 expr: OBJECTID '(' • expr_list ')'
